tests/sealed_objects/sealed_objects.exp
Error: test.js:2
  2: var s1: string = o1.y; // error
                         ^ property `y`. Property not found in
  2: var s1: string = o1.y; // error
                      ^^ object literal

Error: test.js:7
  7: var o3: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; });
                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. This type is incompatible with
  7: var o3: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; });
             ^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `y` is incompatible:
      7: var o3: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; });
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ property `y`. Property not found in
      7: var o3: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; });
                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type

Error: test.js:19
 19: var o7: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; [_:any]:number}); // error
                                                                                ^^^^^^ Cannot assign object literal to `o7` because in property `y`, number [1] is incompatible with string [2].
  References:
   19: var o7: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; [_:any]:number}); // error
                                                                                  ^^^^^^ [1]: number
   19: var o7: { x: number; y?: string; } = ({ x: 0, y: 0 }: { x: number; [_:any]:number}); // error
                                ^^^^^^ [2]: string


Found 3 errors
